--- a/config/database.yml
+++ b/config/database.yml
@@ -83,3 +83,4 @@ production:
   database: facebook_production
   username: facebook
   password: <%= ENV['FACEBOOK_DATABASE_PASSWORD'] %>
+  host: 52.199.30.117
