--- a/config/database.yml
+++ b/config/database.yml
@@ -82,5 +82,4 @@ production:
   <<: *default
   database: facebook_production
   username: facebook
-  password: <%= ENV['FACEBOOK_DATABASE_PASSWORD'] %>
-  host: 52.199.30.117
+  host: http://52.199.30.117/
