Gemfileに本番環境のDBの設定を追加

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,6 @@ production:
   <<: *default
   database: facebook_production
   username: facebook
+  password: <%= ENV['FACEBOOK_DATABASE_PASSWORD'] %>
   host: 52.199.30.117
+  encoding: utf8
